@@ -1,9 +1,0 @@
-#pragma once
-
-#include "ofMatrix4x4.h"
-
-#warning ofxMatrix4x4 has been deprecated. 
-#warning Remove all references to ofxMatrix4x4.h and use ofMatrix4x4 instead.
-
-typedef ofMatrix4x4 ofxMatrix4x4;
-
