@@ -1,8 +1,0 @@
-#pragma once
-
-#include "ofVec3f.h"
-
-#warning ofxPoint3f has been deprecated. 
-#warning Remove all references to ofxPoint3f.h and use ofVec3f instead.
-
-typedef ofVec3f ofxPoint3f;
