@@ -1,8 +1,0 @@
-#pragma once
-
-#include "ofVec4f.h"
-
-#warning ofxVec4f has been deprecated. 
-#warning Remove all references to ofxVec4f.h and use ofVec4f instead.
-
-typedef ofVec4f ofxVec4f;
